[package]
name = "computer"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
futures-util = "0.3.31"
inputbot = "0.6.0"
notify-rust = "4.11.3"
sysinfo = "0.36.1"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
url = "2.5.4"
